--- a/src/certificate/index3.html
+++ b/src/certificate/index3.html
@@ -59,7 +59,7 @@
       text-align: right;
     }
     .center-header {
-      width: 80%;
+      width: 100%;
       text-align: center;
     }
     .right-header {
@@ -107,7 +107,10 @@ justify-content: center;    }
                    <div class="certificate-code">
                     <h1>በአዲስ አበባ ከተማ አስተዳደር የምግብ፣የመድኃኒትና</h1>
                     <h1>የጤና ክብካቤ አስተዳደርና ቁጥጥር ባለስልጣን </h1>
-                    <h1>የቴሌሄልዝ ሴንተር የብቃት ማረጋገጫ</h1>
+                    <h2>Addis Ababa Food Medicine and Health Care Administration Authority </h2>
+                    <h1>የመድኃኒት ችርቻሮ ንግድ ድርጅት የብቃት ማረጋገጫ</h1>
+                    <h2>Competency Certificate for Retail Pharmacy</h2>
+
                   </div>
                   </div>
                   <div class="right-header border">
@@ -121,7 +124,11 @@ justify-content: center;    }
             <div class="content">
                 <p>የድርጅቱ ስምና ደረጃ</p>
                 <p style="text-decoration: underline; font-weight: bold;">አቢሲኒያ መድኃኒት ቤት ቁጥር.5</p>
-            </div><div class="content">
+            </div>
+            <div class="content">
+                <p>Name of Health Facility and Type of Service </p>
+                <p style="text-decoration: underline; font-weight: bold;">Abyssinia Pharmacy No. 5</p>
+            </div>  <div class="content">
                 <p>የድርጅቱ አድራሻ፤ መስተዳድር </p>
                 <p style="text-decoration: underline; font-weight: bold;">አ/አ</p>
                 <p>ክ/ከተማ</p>
@@ -133,6 +140,20 @@ justify-content: center;    }
                 <p>የስልክ ቁጥር </p>
                 <p style="text-decoration: underline; font-weight: bold;">090930097848</p>
             </div>  
+            <div class="content">
+                <p>Adress</p>
+                <p style="text-decoration: underline; font-weight: bold;"> Adiss Ababa</p>
+                <p>City</p>
+                <p style="text-decoration: underline; font-weight: bold;">N/S/L</p>
+                <p> Subcity</p>
+                <p style="text-decoration: underline; font-weight: bold;">06</p>
+                <p>Woreda</p>
+                <p style="text-decoration: underline; font-weight: bold;">06</p>
+                <p>House No</p>
+                <p style="text-decoration: underline; font-weight: bold;">3495</p>
+                <p>Tel .No </p>
+                <p style="text-decoration: underline; font-weight: bold;">090930097848</p>
+             </div>  
             <div class="content">
                 <p>የድርጅቱ ባለንብረት ስም</p>
                 <p style="text-decoration: underline; font-weight: bold;">አቶ ሳምሶን አሰፋ</p>
@@ -149,9 +170,23 @@ justify-content: center;    }
             </div>  <div class="content">
                 <p>የመያ ምዝገባ ቁጥር </p>
                 <p style="text-decoration: underline; font-weight: bold;">JP=1906/2011</p>
-            </div>   
+            </div>  <div class="content">
+                <p>Facility Owner Name</p>
+                <p style="text-decoration: underline; font-weight: bold;">Ato Samson Asefa</p>
+            </div>  <div class="content">
+                <p>Technical Leader full Name</p>
+                <p style="text-decoration: underline; font-weight: bold;">W/ro Hiwot Mitiku Anulo</p>
+            </div>  <div class="content">
+                <p>Qualification</p>
+                <p style="text-decoration: underline; font-weight: bold;">Junior Pharmacist</p>
+                <p>Reg.no.</p>
+                <p style="text-decoration: underline; font-weight: bold;">JP=1906/2011</p>
+            </div> 
                 <p>ድርጅቱ ተፈላጊውን ሙያዊ፤ ድርጅታዊና ሌሎች መስፈርቶችን ማሟላቱ ይህ የብቃት ማረጋገጫ ምስክር ወረቀት የምግብ፣የመድኃኒትና የጤና ክብካቤ አስተዳደርና ቁጥጥር አዋጅ 64/2011 ቁጥር ፤44መሠረት በባለሙያው/ዋ <b> ወ/ሪት ህይወት ምትኩ </b> ሰም ተሰጥቷል፡፡</p>
-               <div >
+                <p>This Certificate is issued to the Health Facility in accordance with AAFMHACA Proclamation No. 64/2011
+                    article 44 after assuring the fulfillment of the required National Health Facility standard.</p>
+                   
+                    <div >
                         <div class="column" >
                           <h2>ለ 2015 ዓ.ም </h2>
                           <p> በደረሰኝ ቁጥር-----------------</p>
