Change Application form layout

--- a/src/certificate/index3.html
+++ b/src/certificate/index3.html
@@ -141,7 +141,7 @@ justify-content: center;    }
                 <p style="text-decoration: underline; font-weight: bold;">090930097848</p>
             </div>  
             <div class="content">
-                <p>Adress</p>
+                <p>Address</p>
                 <p style="text-decoration: underline; font-weight: bold;"> Adiss Ababa</p>
                 <p>City</p>
                 <p style="text-decoration: underline; font-weight: bold;">N/S/L</p>
